# mcpelauncher-server

./: CMakeLists.txt  CPackSettings.cmake
src/: console_reader.cpp  console_reader.h  launcher_minecraft_api.cpp  launcher_minecraft_api.h  main.cpp  server_minecraft_app.h  server_properties.h  stub_key_provider.h  v8_platform.cpp  v8_platform.h
